syntax = "proto3"; 

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message AccountWithCashflows{ 
    string account_id=1;
    string currency=2;
    double int_rate=3;
    double outstanding_bal=4;
    string gl=5;
    int64 start_date=6;
    int64 maturity_date=7;
    string rate_flag=8;
    string branch=9;
    string customer_id=10;
    string customer_type=11;
    string product_code=12;
    string group=13;
    string acc_branch=14;
    string acc_number=15;
    string acc_suffix=16;
    string acc_type=17;
    string deal_type=18;
    string repricing_frequency=19;
    int64 last_repr_date=20;
    int64 next_repr_date=21;
    int64 int_compounding_frequency=22;
    int64 int_repayment_frequency=23;
    string margin_rate=24;
    string cpas=25;
    string cust_constitution_code=26;
    string customer_rating=27;
    string p2=28;
    string analysis_code=29;
    string sundry_analysis_code=30;
    string numeric_analysis_code=31;
    string base_rate_code=32;
    string differential_rate_code=33;
    double accrued_int_amt=34;
    int64 next_rollover_date=35;
    string interest_computation_type=36;
    string rm=37;
    string customer_name=38;
    double monthly_avg_bal=39;
    string pension_acc_flag=40;
    string waiver_flag=41;
    string aorl=42;
    int32 rl1=43;
    int32 rl2=44;
    int32 rl3=45;
    double A1=46;
    double A2=47;
    double A3=48;
    double A4=49;
    double A5=50;
    int64 A6=51;
    int64 A7=52;
    int64 A8=53;
    int64 A9=54;
    int64 A10=55;
    string A11=56;
    string A12=57;
    string A13=58;
    string A14=59;
    string A15=60;
    string A16=61;
    string A17=62;
    string A18=63;
    string A19=64;
    string A20=65;
    double total_interest_amount=66;
    double total_principal_amount=67;
    repeated Cashflow cashflows=68;
}
